# GraphBLAS

./: .gitignore  2  5  9  CMakeLists.txt  Context_thoughts.txt  FIXME.txt  FindGraphBLAS.cmake  GB_mxm_3179374589115891797.h  GB_slice_vector.c  LICENSE  Makefile  README.md  README_FIRST.txt  README_FIRST_BEFORE_YOU_DO_ANYTHING_EXCLAMATION_POINT.txt  README_Hackathon.txt  TODO  TODO.txt  TODO2.txt  TODO3.txt  TODO_parallel.txt  add_notes.c  atxtest.m  axtest.m  bash_profile  context.c  d  d1  g1  hash_notes.txt  mac_clang_defines.h  mac_gcc8_defines.h  mac_icc.h  mxmtest.m  myjob.e462820  notes.txt  notes_on_GB_add.c  notes_on_setelement.c  o  o2  (+9 more)
CUDA/: CMakeLists.txt  GB_AxB_dot3_cuda.cpp  GB_AxB_dot3_cuda.cu  GB_AxB_dot3_cuda_branch.cpp  GB_AxB_dot3_cuda_branch.cu  GB_Matrix_allocate.c  GB_Matrix_allocate.h  GB_callback.hpp  GB_cuda.h  GB_cuda.hpp  GB_cuda_AxB.hpp  GB_cuda_AxB_dot3.cpp  GB_cuda_AxB_dot3_branch.cpp  GB_cuda_AxB_dot3_jit.cpp  GB_cuda_apply.hpp  GB_cuda_apply_bind1st_jit.cpp  GB_cuda_apply_bind2nd_jit.cpp  GB_cuda_apply_binop.cpp  GB_cuda_apply_binop_branch.cpp  GB_cuda_apply_unop.cpp  GB_cuda_apply_unop_branch.cpp  GB_cuda_atomics.cu  GB_cuda_atomics.cuh  GB_cuda_buckets.h  GB_cuda_colscale.cpp  GB_cuda_colscale_jit.cpp  GB_cuda_common_jitFactory.hpp  GB_cuda_cumsum.cu  GB_cuda_dot3_defn.h  GB_cuda_error.h  GB_cuda_error.hpp  GB_cuda_ewise.hpp  GB_cuda_get_device_count.cu  GB_cuda_get_device_properties.cu  GB_cuda_global.h  GB_cuda_init.c  GB_cuda_jitify_cache.cu  GB_cuda_jitify_cache.h  GB_cuda_jitify_cache.hpp  GB_cuda_jitify_launcher.cu  (+71 more)
CUDA/Config/: GB_cuda_common_jitFactory.hpp.in
CUDA/JitKernels/: GB_cuda_jit_AxB_dot3_dense_phase1.cuh  GB_cuda_jit_AxB_dot3_phase1.cuh  GB_cuda_jit_AxB_dot3_phase3_dndn.cuh  GB_cuda_jit_AxB_dot3_phase3_mp.cuh  GB_cuda_jit_AxB_dot3_phase3_spdn.cuh  GB_cuda_jit_AxB_dot3_phase3_vsdn.cuh  GB_cuda_jit_AxB_dot3_phase3_vsvs.cuh  GB_cuda_jit_AxB_phase2.cuh  GB_cuda_jit_AxB_phase2end.cuh  GB_cuda_jit_reduce.cuh  GB_jit_kernel_cuda_AxB_dot3.cu  GB_jit_kernel_cuda_apply_bind1st.cu  GB_jit_kernel_cuda_apply_bind2nd.cu  GB_jit_kernel_cuda_apply_unop.cu  GB_jit_kernel_cuda_colscale.cu  GB_jit_kernel_cuda_reduce.cu  GB_jit_kernel_cuda_rowscale.cu
CUDA/Template/: GB_cuda_AxB_dot3_buckets.hpp  GB_cuda_atomics.cuh  GB_cuda_dot3_defn.cuh  GB_cuda_ek_slice.cuh  GB_cuda_jit_AxB_dot3_dense_phase1.cuh  GB_cuda_jit_AxB_dot3_phase1.cuh  GB_cuda_jit_AxB_dot3_phase2.cuh  GB_cuda_jit_AxB_dot3_phase2end.cuh  GB_cuda_jit_AxB_dot3_phase3_dndn.cuh  GB_cuda_jit_AxB_dot3_phase3_mp.cuh  GB_cuda_jit_AxB_dot3_phase3_spdn.cuh  GB_cuda_jit_AxB_dot3_phase3_vsdn.cuh  GB_cuda_jit_AxB_dot3_phase3_vsvs.cuh  GB_cuda_jit_AxB_phase2.cuh  GB_cuda_jit_AxB_phase2end.cuh  GB_cuda_kernel.cuh  GB_cuda_kernel.h  GB_cuda_shfl_down.cuh  GB_cuda_threadblock_reduce_ztype.cuh  GB_cuda_threadblock_sum_uint64.cuh  GB_h_subset.cuh
CUDA/deprecated/: GB_cuda_semiring_factory.hpp  GB_stringify.h  GB_stringify_load.c  GB_stringify_semiring.c  Makefile
CUDA/include/: GB_cuda_kernel.cuh
CUDA/template/: GB_cuda_cumsum.cuh  GB_cuda_jit_AxB_dot3_dense_phase1.cuh  GB_cuda_jit_AxB_dot3_phase1.cuh  GB_cuda_jit_AxB_dot3_phase2.cuh  GB_cuda_jit_AxB_dot3_phase2end.cuh  GB_cuda_jit_AxB_dot3_phase3_dndn.cuh  GB_cuda_jit_AxB_dot3_phase3_mp.cuh  GB_cuda_jit_AxB_dot3_phase3_spdn.cuh  GB_cuda_jit_AxB_dot3_phase3_vsdn.cuh  GB_cuda_jit_AxB_dot3_phase3_vssp.cuh  GB_cuda_jit_AxB_dot3_phase3_vsvs.cuh  GB_cuda_shfl_down.cuh  GB_jit_AxB_dot3_phase3_vssp.cuh  GB_jit_kernel_cuda_AxB_dot3.cu  GB_jit_kernel_cuda_colscale.cu  GB_jit_kernel_cuda_rowscale.cu  GB_jit_kernel_cuda_select_bitmap.cu  GB_jit_kernel_cuda_select_sparse.cu
CUDA/templates/: GB_Operator.h  GB_jit_AxB_dense_phase1.cuh  GB_jit_AxB_dot3_dense_phase1.cuh  GB_jit_AxB_dot3_phase1.cu  GB_jit_AxB_dot3_phase1.cuh  GB_jit_AxB_dot3_phase3_dndn.cu  GB_jit_AxB_dot3_phase3_dndn.cuh  GB_jit_AxB_dot3_phase3_mp.cu  GB_jit_AxB_dot3_phase3_mp.cuh  GB_jit_AxB_dot3_phase3_mp3_shared.cuh  GB_jit_AxB_dot3_phase3_shared_binary.cuh  GB_jit_AxB_dot3_phase3_spdn.cu  GB_jit_AxB_dot3_phase3_spdn.cu.joe  GB_jit_AxB_dot3_phase3_spdn.cuh  GB_jit_AxB_dot3_phase3_vsdn.cuh  GB_jit_AxB_dot3_phase3_vssp.cu  GB_jit_AxB_dot3_phase3_vssp.cuh  GB_jit_AxB_dot3_phase3_vsvs.cu  GB_jit_AxB_dot3_phase3_vsvs.cuh  GB_jit_AxB_dot3_phase3_warpix.cu  GB_jit_AxB_dot3_phase3_warpix.cuh  GB_jit_AxB_dot3_stupid.cuh  GB_jit_AxB_phase1.cu  GB_jit_AxB_phase1.cuh  GB_jit_AxB_phase2.cu  GB_jit_AxB_phase2.cuh  GB_jit_AxB_phase2end.cu  GB_jit_AxB_phase2end.cuh  GB_jit_atomics.cuh  GB_jit_reduce.cuh  GB_jit_reduceNonZombiesWarp.cu  GB_jit_reduceNonZombiesWarp.cuh  GB_matrix.h  GxB_complex.h  denseDotProduct.cu  mp_old.cuh
CUDA/test/: AxB_dot3_cuda_tests.cu  AxB_dot3_cuda_tests.hpp  Makefile  cuda_tests_template.cpp  dataFactory.hpp  gen_test_data.ipynb  jitFactory.hpp  jitTestFactory.TestJoe  jitTestFactory.hpp  o  o2  output  problem_spec.hpp  run_tests.cpp  run_tests.cu  semiringFactory.hpp  spGEMMfixtures.hpp  testGen_cmake.TestJoe  testGen_cmake.py  test_data.hpp  test_jitify.cpp
CUDA/unused/: GB_cuda_cumsum.cu
GraphBLAS/: .gitignore  CMakeLists.txt  Contents.m  GraphBLAS_MATLAB_OpenMP.cmake  Makefile  README.md  TODO.txt  bb.m  diary.txt  draft.m  gb.c  gb.m  gbbinop.c  gbbinop.m  gbbuild.c  gbbuild.m  gbclear.c  gbdescriptor.c  gbdescriptor.m  gbdisp.c  gbemult.m  gbfind.m  gbmake.m  gbmxm.c  gbmxm.m  gbnew.c  gbnew.m  gbnvals.c  gbnvals.m  gbprint.m  gbselect.m  gbsemiring.c  gbsemiring.m  gbset.m  gbsize.c  gbsize.m  gbsparse.c  gbsparse.m  gbthreads.c  gbthreads.m  (+17 more)
GraphBLAS/@GrB/: GrB.m  MATLAB_vs_GrB.m  abs.m  acos.m  acosh.m  acot.m  acoth.m  acsc.m  acsch.m  all.m  amd.m  and.m  angle.m  any.m  apply.m  apply2.m  argmax.m  argmin.m  argsort.m  asec.m  asech.m  asin.m  asinh.m  assert.m  assign.m  atan.m  atan2.m  atanh.m  (+212 more)
JITpackage/: .gitignore  CMakeLists.txt  GB_JITpackage.c  GB_JITpackage.h  Makefile  README.txt  grb_jitpackage.c
rmm_wrap/: CMakeLists.txt  RMM_WrapConfig.h.in  make_wrap.sh  rmm_device.h  rmm_wrap.cpp  rmm_wrap.h  rmm_wrap.hpp  rmm_wrap_test  rmm_wrap_test.c
(+12747 files in other folders)
